Intro clouds fixed(added no-overlap), added closing intro on author label, animations stoped when intro hidden

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,7 +1,16 @@
+html,
+body {
+    height: 100%;
+    width: 100%;
+    background-color: #181818;
+}
+
 /* Intro */
 
 .intro {
-    position: relative;
+    position: fixed;
+    inset: 0;
+    z-index: 10;
     width: 100%;
     height: 100%;
     color: #fff;
@@ -11,20 +20,16 @@
 
     font-family: Noto Sans;
     overflow: hidden;
+    transition: transform 2s ease-out;
+    background-color: #181818;
 }
 
 .intro.hidden {
     display: none;
 }
 
-
-.intro::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #181818;
-    z-index: -1;
+.intro.leave {
+    transform: translateY(-120%);
 }
 
 .author {
@@ -35,6 +40,8 @@
     font-weight: 100;
     font-size: 17px;
     letter-spacing: 2px;
+    
+    cursor: pointer;
 }
 
 .intro #greetings {
@@ -42,6 +49,7 @@
     font-weight: 100;
     font-size: 80px;
     font-style: normal;
+    
 }
 
 /* Background Clouds Intro */
@@ -55,7 +63,7 @@
     rotate: -10deg;
 
     background:
-        radial-gradient(60px 60px at 20px 65px,  #414141 98%, transparent 100%),
+        radial-gradient(60px 60px at 20px 65px, #414141 98%, transparent 100%),
         radial-gradient(50px 50px at 120px 35px, #414141 98%, transparent 100%),
         radial-gradient(70px 70px at 135px 150px, #414141 98%, transparent 100%),
         linear-gradient(#414141, #414141) 0 70% / 220px 60px no-repeat;
@@ -72,10 +80,10 @@
     rotate: 10deg;
 
     background:
-        radial-gradient(58px 58px at 35px 55px,   #414141 98%, transparent 100%),
-        radial-gradient(48px 48px at 95px 30px,   #414141 98%, transparent 100%),
-        radial-gradient(65px 65px at 155px 58px,  #414141 98%, transparent 100%),
-        radial-gradient(36px 36px at 120px 85px,  #414141 98%, transparent 100%),
+        radial-gradient(58px 58px at 35px 55px, #414141 98%, transparent 100%),
+        radial-gradient(48px 48px at 95px 30px, #414141 98%, transparent 100%),
+        radial-gradient(65px 65px at 155px 58px, #414141 98%, transparent 100%),
+        radial-gradient(36px 36px at 120px 85px, #414141 98%, transparent 100%),
         linear-gradient(#414141, #414141) 0 65% / 210px 56px no-repeat;
 
     filter: blur(40px);
@@ -90,10 +98,10 @@
     rotate: 180deg;
 
     background:
-        radial-gradient(58px 58px at 35px 55px,   #414141 98%, transparent 100%),
-        radial-gradient(48px 48px at 95px 30px,   #414141 98%, transparent 100%),
-        radial-gradient(65px 65px at 155px 58px,  #414141 98%, transparent 100%),
-        radial-gradient(36px 36px at 120px 85px,  #414141 98%, transparent 100%),
+        radial-gradient(58px 58px at 35px 55px, #414141 98%, transparent 100%),
+        radial-gradient(48px 48px at 95px 30px, #414141 98%, transparent 100%),
+        radial-gradient(65px 65px at 155px 58px, #414141 98%, transparent 100%),
+        radial-gradient(36px 36px at 120px 85px, #414141 98%, transparent 100%),
         linear-gradient(#414141, #414141) 0 65% / 210px 56px no-repeat;
 
     filter: blur(40px);
@@ -103,10 +111,24 @@
 .second-cloud-intro,
 .thrid-cloud-intro {
     opacity: 0;
-    transition: opacity 3s ease-in-out;
+    transition: opacity 2s ease-in-out;
     will-change: opacity, top, left;
 }
 
 
 /* Main page */
+
+.container {
+    position: relative;
+    z-index: 1;
+    height: 100vh;
+    width: auto;
+    background-color: #181818;
+    color: #fff;
+    font-size: 50px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
